Updated to reflect fulltime experience and new headshot

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="col-md-1 col-lg-2"></div>
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
-						<div class="profile-img"><img src="images/headshot_california.jpg" alt=""></div>
+						<div class="profile-img"><img src="images/headshot_spain.jpeg" alt=""></div>
 						<h2 class="font-purple"><b>Nayef Ahmed</b></h2>
                         <h4><b>ENGINEER &nbsp;|&nbsp; RESEARCHER &nbsp;|&nbsp; DEVELOPER</b></h4>
                         <ul class="information margin-tb-30">
@@ -95,28 +95,28 @@
                                     <b>Facebook Research</b>
 								</a>                
 							</li> -->
+							<li><b>CONTACT : </b>
+                                <a href="mailto:nayef.ahmed211@gmail.com">
+                                    nayef.ahmed211@gmail.com
+                                </a>
+                            </li>
 							<li>
 								<b>EXPERIENCE : </b>
-								Previously @
-								<a href="https://research.fb.com/" target="_blank">
-                                    <b>Facebook Research</b>
-								</a>,
-								<a href="https://level5.lyft.com/" target="_blank">
+								Software Engineer @
+								<a href="https://ai.facebook.com/" target="_blank">
+                                    <b>Meta AI</b>
+								</a>
+								<!-- <a href="https://level5.lyft.com/" target="_blank">
                                     <b>Lyft Level 5</b>
 								</a>, 
 								 <a href="https://azure.microsoft.com/en-us/" target="_blank">
                                     <b>Microsoft</b>
-                                </a>
+                                </a> -->
 							</li>
 							<li>
 								<b>EDUCATION : </b> Mechatronics Engineering @
                                 <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/" target="_blank">
                                     <b>University of Waterloo</b>
-                                </a>
-                            </li>
-							<li><b>CONTACT : </b>
-                                <a href="mailto:nayef.ahmed211@gmail.com">
-                                    nayef.ahmed211@gmail.com
                                 </a>
                             </li>
                         </ul>
@@ -174,10 +174,6 @@
 								team player with an aptitude for <strong>technology</strong>, an intuition
 								for solving <strong>challenging problems</strong>, and a strong track record in
 								people <strong>leadership</strong>. 
-							</p>
-							<p>
-								I'm currently seeking new grad roles starting <strong>April 2021</strong>. 
-								Feel free to reach out if you know of any cool opportunities or are looking to collaborate!
 							</p>	
 						</div>
 					</div><!-- col-sm-8 -->	
@@ -198,11 +194,25 @@
 						<div class="experience-wrapper">
 
 							<div class="experience margin-b-50">
-								<a href="https://ai.facebook.com/tools/pytorch/" target="_blank">
-									<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
-									<h5 class="font-yellow"><b>FACEBOOK AI RESEARCH</b></h5>
+								<a href="https://github.com/pytorch/text" target="_blank">
+									<h4><b>SOFTWARE ENGINEER</b></h4>
+									<h5 class="font-yellow"><b>META AI</b></h5>
 								</a>
-								<h6 class="margin-t-10">C++, Python, Pytorch, TorchScript &nbsp;|&nbsp; New York, NY (Remote) &nbsp;|&nbsp;  May - Sep 2020</h6>
+								<h6 class="margin-t-10">Python, C++, Pytorch, BigQuery &nbsp;|&nbsp; New York, NY &nbsp;|&nbsp;  Jun 2021 - Present</h6>
+								<ul class="list margin-tb-30">
+									<li>Contributed new components (datasets, transforms, models) as a core maintainer of the torchtext library, engaging with both the open source (OSS) and internal communities</li>
+									<li>Created a multi-modal representation model capable of understanding images, videos, text, and audio by jointly training a vision/text encoder and a transformer-based fusion layer; drove the project end-to-end as the tech lead</li>
+									<li>Managed a summer intern to add a T5 model for text generation tasks; wrote a detailed project plan, provided mentorship, pushed for internal customer adoption, and represented the intern during final evaluations</li>
+									<li>Drove quarterly PyTorch releases to facilitate NLP research and broadcast new features to increase library adoption</li>
+								</ul>
+							</div><!-- experience -->
+
+							<div class="experience margin-b-50">
+								<a href="https://pytorch.org/text/stable/index.html" target="_blank">
+									<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
+									<h5 class="font-yellow"><b>FACEBOOK AI</b></h5>
+								</a>
+								<h6 class="margin-t-10">Python, C++, Pytorch, TorchScript &nbsp;|&nbsp; New York, NY (Remote) &nbsp;|&nbsp;  May - Sep 2020</h6>
 								<ul class="list margin-tb-30">
 									<li>Worked with the AI Platform team to design and implement high-performance NLP building blocks (Tokenizer, Vector, Vocab) for PyTorch</li>
 									<li>Profiled CPU performance of NLP preprocessors on several datasets using Flame Graphs and applying concurrency to decrease load times by over 60x</li>
@@ -217,10 +227,10 @@
 									<h4><b>SOFTWARE ENGINEER INTERN - AUTONOMOUS VEHICLES</b></h4>
 									<h5 class="font-yellow"><b>LYFT LEVEL 5</b></h5>
 								</a>
-								<h6 class="margin-t-10">C++, Python, TensorFlow, OpenCV &nbsp;|&nbsp; Palo Alto, CA &nbsp;|&nbsp;  Jan - Apr 2020</h6>
+								<h6 class="margin-t-10">Python, C++, TensorFlow, OpenCV &nbsp;|&nbsp; Palo Alto, CA &nbsp;|&nbsp;  Jan - Apr 2020</h6>
 								<ul class="list margin-tb-30">
 									<li>Trained new classifier with the Perception team capable of detecting traffic light bulb shapes with 90%+ accuracy on an extremely unbalanced dataset</li>
-									<li>Designed a regression test suite which can provide a binary decision for engineers when deciding whether to release a new model to the vehicle</li>
+									<li>Designed a regression test suite capable of providing a binary decision to engineers when deciding whether to release a new model to the autonomous vehicle flee</li>
 									<li>Created a test creation GUI that gives engineers finer control when selecting relevant obstacles from an image which cannot be regressed on in the future</li>
 								</ul>
 							</div><!-- experience -->
@@ -230,7 +240,7 @@
 									<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
 									<h5 class="font-yellow"><b>FACEBOOK AI RESEARCH</b></h5>
 								</a>
-								<h6 class="margin-t-10">C++, Python, OpenCV, PyTorch &nbsp;|&nbsp; Menlo Park, CA &nbsp;|&nbsp;  May - Aug 2019</h6>
+								<h6 class="margin-t-10">Python, C++, OpenCV, PyTorch &nbsp;|&nbsp; Menlo Park, CA &nbsp;|&nbsp;  May - Aug 2019</h6>
 								<ul class="list margin-tb-30">
 									<li>Worked within the Applied Research Computer Vision team to create a face detection and tracking pipeline running on all Facebook videos in real-time</li>
 									<li>Benchmarked precision and recall of various detection models (Mask R-CNN, DFSD, Viola-Jones) and tracking algorithms on a 600k SOA video dataset</li>
@@ -308,7 +318,19 @@
 					</div><!-- col-sm-4 -->
 					<div class="col-sm-8">
 						<div class="project-wrapper">
-							
+							<div class="project margin-b-50">
+								<a href="https://github.com/Nayef211/FlappyGoose" target="_blank">
+									<h4><b>WRAP</b></h4>
+									<h5 class="font-yellow"><b>WHITEBOARD RECOGNITION AND ANALYSIS PLATFORM</b></h5>
+								</a>
+								<h6 class="margin-t-10">Python, C++, GCP, Firebase, React Native</h6>
+								<ul class="list margin-tb-30">
+									<li>Created a cross-platform mobile app to record and uploaded lectures to the cloud</li>
+									<li>Processed lectures in real-time and applied heuristics, and computer vision to digitize video into formatted lecture notes</li>
+								</ul>
+							</div><!-- project -->
+
+
 							<div class="project margin-b-50">
 								<a href="https://github.com/Nayef211/FlappyGoose" target="_blank">
 									<h4><b>FLAPPY GOOSE</b></h4>
