Content + resume updates

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 					<div class="col-sm-8">
 						<div class="about-wrapper">
 							<p class="margin-b-50">
-								Hey, I'm Nayef! I'm extremely passionate about <strong>software
+								Hey, I'm Nayef! I'm passionate about <strong>software
 								development</strong>, <strong>artificial intelligence</strong>, and <strong>autonomous vehicles</strong>
-								and love to work on projects where these fields intersect. I'm also a personable
+								and love working on projects where these fields intersect. I'm also a personable
 								team player with an aptitude for <strong>technology</strong>, an intuition
 								for solving <strong>challenging problems</strong>, and a strong track record in
 								people <strong>leadership</strong>. 
@@ -195,10 +195,10 @@
 								</a>
 								<h6 class="margin-t-10">Python, C++, Pytorch, BigQuery &nbsp;|&nbsp; New York, NY &nbsp;|&nbsp;  Jun 2021 - Present</h6>
 								<ul class="list margin-tb-30">
-									<li>Contributed new components (datasets, transforms, models) as a core maintainer of the torchtext library, engaging with both the open source (OSS) and internal communities</li>
-									<li>Created a multi-modal representation model capable of understanding images, videos, text, and audio by jointly training a vision/text encoder and a transformer-based fusion layer; drove the project end-to-end as the tech lead</li>
-									<li>Managed a summer intern to add a T5 model for text generation tasks; wrote a detailed project plan, provided mentorship, pushed for internal customer adoption, and represented the intern during final evaluations</li>
-									<li>Drove quarterly PyTorch releases to facilitate NLP research and broadcast new features to increase library adoption</li>
+									<li>Tech leading a team of 4 engineers to deliver a multi-modal representation model capable of understanding images, videos, text, and audio by jointly training a vision/text encoder along with a transformer-based fusion layer</li>
+									<li>Developed new components (datasets, transforms, models) as a core maintainer of the PyTorch Text library, engaged in feature discussions and solicited feedback from both the open source and internal communities</li>
+									<li>Managed a summer intern to develop a transformer-based encoder-decoder model (T5) for text generation tasks; wrote a detailed project plan, provided mentorship, pushed for customer adoption, and represented the intern during final evaluations</li>
+									<li>Increased library adoption 300% YOY by driving quarterly PyTorch releases and broadcasting new features to researchers</li>
 								</ul>
 							</div><!-- experience -->
 
@@ -208,19 +208,19 @@
 									<h5 class="font-yellow"><b>FACEBOOK AI</b></h5>
 								</a>
 								<h6 class="margin-t-10">Python, C++, Pytorch, TorchScript &nbsp;|&nbsp; New York, NY (Remote) &nbsp;|&nbsp;  May - Sep 2020</h6>
-								<ul class="list margin-tb-30">
+								<ul class="list margin-tb-30"> 
 									<li>Worked with the AI Platform team to design and implement high-performance NLP building blocks (Tokenizer, Vector, Vocab) for PyTorch</li>
 									<li>Profiled CPU performance of NLP preprocessors on several datasets using Flame Graphs and applying concurrency to decrease load times by over 60x</li>
 									<!-- <li>Training a BERT model with masked-language modeling and next-sentence tasks to improve performance on IWSLT’14 English-German translation dataset</li> -->
+									<li>Won 2 awards for creating a Workplace VC “quickchat” feature at the Global Summer Hackathon, receiving overwhelming interest to ship to production</li>
 									<li>Supported upcoming Pytorch releases to facilitate NLP research and demonstrate the feasibility of new features for internal adoption</li>
-									<li>Won several awards for creating a “quickchat” feature in Workplace VC at the Global Summer Hackathon, receiving overwhelming interest to ship to production</li>
 								</ul>
 							</div><!-- experience -->
 
 							<div class="experience margin-b-50">
 								<a href="https://level5.lyft.com/" target="_blank">
-									<h4><b>SOFTWARE ENGINEER INTERN - AUTONOMOUS VEHICLES</b></h4>
-									<h5 class="font-yellow"><b>LYFT LEVEL 5</b></h5>
+									<h4><b>SOFTWARE ENGINEER INTERN</b></h4>
+									<h5 class="font-yellow"><b>LYFT LEVEL 5 (AUTONOMOUS VEHICLES)</b></h5>
 								</a>
 								<h6 class="margin-t-10">Python, C++, TensorFlow, OpenCV &nbsp;|&nbsp; Palo Alto, CA &nbsp;|&nbsp;  Jan - Apr 2020</h6>
 								<ul class="list margin-tb-30">
@@ -320,7 +320,7 @@
 								</a>
 								<h6 class="margin-t-10">Python, C++, GCP, Firebase, React Native</h6>
 								<ul class="list margin-tb-30">
-									<li>Created a cross-platform mobile app to record and uploaded lectures to the cloud</li>
+									<li>Created a cross-platform mobile app to record and upload lectures to the cloud</li>
 									<li>Processed lectures in real-time and applied heuristics, and computer vision to digitize video into formatted lecture notes</li>
 								</ul>
 							</div><!-- project -->
